# bleauinfo-ML

./: .gitignore  README.md  boulder_exploration.ipynb  pyproject.toml
models/: boulder.py  style.py
notebooks/boulder_recommendation/: v1_cosine_smilarity_on_ascents.ipynb  v2_advanced_similarity_calculation.ipynb  v3_matrix_testing.ipynb  v4_matrix_factorization.ipynb
